--- a/CDL.tex
+++ b/CDL.tex
@@ -23,6 +23,7 @@
 ~~ \SPEC{\ensures~ \code{CNT(i,-1)}};\\
 \\
 \\
+\pause
 \code{void~await(\CDL~i)}\\
 ~~ \SPEC{\requires~\LatchOut{i}{P}{\sep}\code{CNT(i,0)}}\\
 ~~ \SPEC{\ensures~ \code{P}{\sep}\code{CNT(i,-1)}};\\
@@ -32,26 +33,26 @@
 \]
 \end{frame}
 
-\begin{frame}{Normalization Rules}
-\begin{center}
-\begin{small}
-\[
-\begin{array}{l}
-\BSPEC{\normrulen{1}:
+\begin{frame}[shrink=17]{Splitting Lemmas}
+%% \begin{center}
+%% \begin{small}
+%% \[
+%% \begin{array}{l}
+%% \BSPEC{\normrulen{1}:
 
-\CNT{c}{n} {\sep} \CNT{c}{-1} {\wedge} \code{n\sm{\leq}0} {\longrightarrow} \CNT{c}{-1}}
-\\
-\BSPEC{\normrulen{2}:
-\CNT{c}{n1} {\sep} \CNT{c}{n2}\, {\wedge}\, \code{n}{=}\code{n1{+}n2} \,{\wedge}\, \code{n1,n2}{\geq}\code{0} 
-{\longrightarrow} \CNT{c}{n}}
-\\
-\BSPEC{\normrulen{3}:
-\LatchOut{c}{P} {\sep} \CNT{c}{-1}  {\longrightarrow} \CNT{c}{-1}{\sep}\code{P}}
-\end{array}
-\]
-\end{small}
-\end{center}
-\pause
+%% \CNT{c}{n} {\sep} \CNT{c}{-1} {\wedge} \code{n\sm{\leq}0} {\longrightarrow} \CNT{c}{-1}}
+%% \\
+%% \BSPEC{\normrulen{2}:
+%% \CNT{c}{n1} {\sep} \CNT{c}{n2}\, {\wedge}\, \code{n}{=}\code{n1{+}n2} \,{\wedge}\, \code{n1,n2}{\geq}\code{0} 
+%% {\longrightarrow} \CNT{c}{n}}
+%% \\
+%% \BSPEC{\normrulen{3}:
+%% \LatchOut{c}{P} {\sep} \CNT{c}{-1}  {\longrightarrow} \CNT{c}{-1}{\sep}\code{P}}
+%% \end{array}
+%% \]
+%% \end{small}
+%% \end{center}
+%% \pause
 %%%%%%%%%%%%%%%%%%% Other rules
 \begin{small}
 \[
@@ -70,9 +71,70 @@
 \end{array}
 \]
 \end{small}
+
+\pause
+\begin{center}
+\begin{small}
+\code{c = \createlatch(2)~with~\SPEC{P{\sep}Q};} \\
+\code{\CSPEC{\LatchOut{c}{P{\sep}Q}{\sep}\LatchIn{c}{P{\sep}Q}{\sep}\CNT{c}{2}}} \\
+\code{\CSPEC{\LatchOut{c}{P{\sep}Q}{\sep}\LatchIn{c}{P}{\sep}\LatchIn{c}{Q}{\sep}\CNT{c}{0}{\sep}\CNT{c}{1}{\sep}\CNT{c}{1}}} \\\vspace{-12pt}
+\[
+\left(
+\begin{tabular}{ 
+  l@{\extracolsep{\fill}} || 
+  l@{\extracolsep{\fill}} || 
+  l@{\extracolsep{\fill}} }
+%% \code{\saying{$T_m$}} & \code{\saying{$T_1$}} & \code{\saying{$T_2$}}\\
+\code{\dotonly{}} & \code{\dotsaying{create P}} & \code{\dotsaying{create Q}}\\
+\!\!\code{\CSPEC{\!\!\LatchOut{c}{P{\sep}Q}{\sep}\CNT{c}{0}}}
+& \code{\CSPEC{\!\!P{\sep}\LatchIn{c}{P}{\sep}\CNT{c}{1}}} 
+& \code{\CSPEC{\!\!Q{\sep}\LatchIn{c}{Q}{\sep}\CNT{c}{1}}} \\
+\!\!\code{await(c);} & \code{countDown(c);} & \code{countDown(c);}\\
+\!\!\code{\CSPEC{{P{\sep}Q{\sep}\CNT{c}{-1}}}}
+& \code{\CSPEC{\CNT{c}{0}}} 
+& \code{\CSPEC{\CNT{c}{0}}} \\
+\code{\dotsaying{use P*Q}} & \code{\dotonly{}} & \code{\dotonly{}} \\
+%% \code{\ldots} & & \\
+\end{tabular}\!\!\right)%\!\!\code{;}
+\]
+\end{small}
+\end{center}
+
 \end{frame}
 
 % Race error
+\begin{frame}{Race Condition}
+\begin{center}
+  \begin{small}
+\code{c = \createlatch(1)~with~\SPEC{P{\sep}Q};} 
+\\\vspace{-12pt}
+\[
+\left(
+\begin{tabular}{ 
+  l@{\extracolsep{\fill}} || 
+  l@{\extracolsep{\fill}} || 
+  l@{\extracolsep{\fill}} }
+\code{\dotonly{}} & \code{\dotsaying{create P}} & \code{\dotsaying{create Q}} \\
+%% \!\!\code{\CSPEC{\!\!\LatchOut{c}{P{\sep}Q}{\sep}\CNT{c}{0}}}
+%% &\code{\CSPEC{\!\!P{\sep}\LatchIn{c}{P}{\sep}\CNT{c}{1}}} 
+%% & \code{\CSPEC{\!\!Q{\sep}\LatchIn{c}{Q}{\sep}\CNT{c}{0}}} \\
+\code{await(c);} & \code{countDown(c);} & \code{skip();}\\
+%% \!\!\code{\CSPEC{\!\!{P{\sep}Q{\sep}\CNT{c}{-1}}}}
+%% & \code{\CSPEC{\!\!\CNT{c}{0}}} 
+%% & \code{\CSPEC{\!\!Q{\sep}\LatchIn{c}{Q}{\sep}\CNT{c}{0}}} \\
+\code{\dotsaying{use P*Q}} & \code{\dotonly{}} & \code{\dotonly{}} \\
+\end{tabular}\!\!\right)%\!\!\code{;}
+\]
+
+\end{small}
+\end{center}
+
+\begin{itemize}
+\item The first thread uses \code{Q} while it's not ready for use.
+\end{itemize}
+\end{frame}
+
+
 \begin{frame}[shrink=17]{Race Error}
   \BSPEC{\errrulen{1}:
     \LatchIn{c}{P}{\sep}\code{CNT(c,-1)}
@@ -81,8 +143,66 @@
     \input{race-error}
 \end{frame}
 
+\begin{frame}[shrink=17]{Race Error}
+  \input{race-error-2}
+  \begin{itemize}
+    \item The precondition of {\CD} cannot be \code{CNT(c,0)}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}[shrink=17]{Race Error}
+  \input{race-error-3}
+\pause
+  \begin{center}
+\begin{small}
+\[
+\begin{array}{l}
+\BSPEC{\normrulen{1}:
+
+\CNT{c}{n} {\sep} \CNT{c}{-1} {\wedge} \code{n\sm{\leq}0} {\longrightarrow} \CNT{c}{-1}}
+\\
+\BSPEC{\normrulen{2}:
+\CNT{c}{n1} {\sep} \CNT{c}{n2}\, {\wedge}\, \code{n}{=}\code{n1{+}n2} \,{\wedge}\, \code{n1,n2}{\geq}\code{0} 
+{\longrightarrow} \CNT{c}{n}}
+%% \\
+%% \BSPEC{\normrulen{3}:
+%% \LatchOut{c}{P} {\sep} \CNT{c}{-1}  {\longrightarrow} \CNT{c}{-1}{\sep}\code{P}}
+\end{array}
+\]
+\end{small}
+\end{center}
+
+\end{frame}
+
 % Deadlock
 \begin{frame}{Deadlock}
+%%   \BSPEC{\errrulen{2}: 
+%% \code{CNT(c,a)}{\sep}\code{CNT(c,-1)}\sm{\wedge}\code{a{>}0} 
+%% \sm{\longrightarrow} \DEADLOCK}
+%% \pause
+\begin{center}
+\begin{small}
+\code{c = \createlatch(2);}
+%% \code{\CSPEC{CNT(c,2) {\LRA} CNT(c,2){\sep}CNT(c,0)}}\\
+\[
+{
+\left(
+\begin{tabular}{ l@{\extracolsep{\fill}}  || l@{\extracolsep{\fill}} }
+%% \code{\CSPEC{CNT(c,2)}} &~~\code{\CSPEC{CNT(c,0)}}\\
+\code{countDown(c);~~} &~~\code{await(c);}\\
+%% \code{\CSPEC{CNT(c,1)}} &~~\code{\CSPEC{CNT(c,-1)}}\\
+\end{tabular}\right)\code{;}
+}
+\]
+
+%% \code{\CSPEC{CNT(c,1){\sep}CNT(c,-1)}}% \sm{\longrightarrow} \DEADLOCK}}
+%% \\
+%% \code{\CSPEC{{\color{red}{\DEADLOCK} detected by \errrulen{2}}}}
+\end{small}
+\end{center}
+%% \end{frame}
+\pause
+%% \begin{frame}{Deadlock}
   \BSPEC{\errrulen{2}: 
 \code{CNT(c,a)}{\sep}\code{CNT(c,-1)}\sm{\wedge}\code{a{>}0} 
 \sm{\longrightarrow} \DEADLOCK}
@@ -109,8 +229,36 @@
 \end{small}
 \end{center}
 \end{frame}
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}{Inter-latch Deadlock}
+  \begin{small}
+\begin{center}
+\code{c1 = \createlatch(1); c2 = \createlatch(1);}\\
+%% \CSPEC{WAIT\{\} $\ast$ CNT(c1,1) $\ast$ CNT(c2,1)
+%%   $\Longrightarrow$ }  \\
+%% \CSPEC{CNT(c1,1) {\sep} CNT(c2,0) {\sep} CNT(c2,1) {\sep} CNT(c1,0) }\\
+\[
+{
+\left(
+\begin{tabular}{ l@{\extracolsep{\fill}}  || l@{\extracolsep{\fill}} }
+%% \CSPEC{CNT(c1,1){\sep}CNT(c2,0)} &~~\CSPEC{CNT(c2,1){\sep}CNT(c1,0)}\\
+\code{await(c2);~~} &~~\code{await(c1);}\\
+%% \CSPEC{CNT(c1,1){\sep}CNT(c2,-1)} &~~\CSPEC{CNT(c2,1){\sep}CNT(c1,-1)}\\
+%% \CSPEC{$\ast$ WAIT(\{c2 $\rightarrow$ c1\})} &~~ \CSPEC{$\ast$ WAIT(\{c1 $\rightarrow$ c2\})}\\
+\code{countDown(c1);~~} &~~\code{countDown(c2);}\\
+%% \CSPEC{CNT(c1,0){\sep}CNT(c2,-1)} &~~\CSPEC{CNT(c2,0){\sep}CNT(c1,-1)}\\
+%% \CSPEC{$\ast$ WAIT(\{c2 $\rightarrow$ c1\})} &~~ \CSPEC{$\ast$ WAIT(\{c1 $\rightarrow$ c2\})}\\
+\end{tabular}\right)%\code{;}
+}
+\]
+
+%% \CSPEC{\quad CNT(c1,-1){\sep}CNT(c2,-1) {\sep} WAIT(\{c2 $\rightarrow$ c1, c1
+%%   $\rightarrow$ c2\})} \\ 
+%% \code{\CSPEC{{\color{red}{\DEADLOCK} detected by \errrulen{3} }}}
+
+\end{center}
+\end{small}
+\pause
   \BSPEC{\waitrulen{1}:
   \WAITC{\code{S}}\sm{{\wedge}\neg}\code{isCyclic(S)}\sm{\longrightarrow}
   \WAITC{\{\}} } \\
@@ -160,55 +308,3 @@
 \end{frame}
 
 
-\begin{frame}{Interpretations for Abstract Predicates}
-\begin{small}
-$
-\begin{array}{lll}
-\vspace{2mm}
- \LatchOut{i}{P} & \defs & \GLOBAL{i}{0} {\ourimply} \code{P}
-\\
- \LatchIn{i}{P} &\defs &  (\code{P}{\septract}\emp) ~{\sep}~ [\DEC]  {\sep}\GLOBAL{i}{m} {\wedge}\code{m>0} 
- \\
-
-\end{array}
-$
-$
-\begin{array}{l}
-\DEC: \begin{array}[t]{ll}
-\GLOBAL{i}{n}\,{\wedge}\,\code{n{>}0} & \rightsquigarrow \GLOBAL{i}{n{-}1}
-\end{array} \\
-\end{array}\\
-$
-\end{small}
-\pause
-\vspace{2mm}
-\begin{small}
-$
-\LOCAL{i}{n} \longrightarrow \GLOBALF{i}{m}{\code{m}{\geq}\code{n}{\geq}\code{0}}
-$
-\end{small} \\
-\begin{small}
-$
-\LOCAL{i}{n}{\wedge}\code{a,b}{\geq}\code{0}{\wedge}{\code{n=a+b}}
-~{\longleftrightarrow}~ \LOCAL{i}{a}{\sep}\LOCAL{i}{b} 
-$
-\end{small} 
-\begin{small}
-$
-\GLOBAL{i}{a}{\sep}\GLOBAL{i}{b} 
-~{\longleftrightarrow}~\GLOBAL{i}{a}{\wedge}\code{a{=}b}
-$
-\end{small}
-\pause
-\vspace{3mm}
-\begin{small}
-$
-\begin{array}{lll}
-\CNT{i}{n} &\defs & \LOCAL{i}{n} {\wedge}\code{n${\geq}$0}
-~{\vee}~ \GLOBAL{i}{0}{\wedge}\code{n=-1} 
-% CNT(i,n) = {|i->n|}&n>0 \/ [i->0] & n=-1
-\end{array}
-$
-\end{small}
-
-\end{frame}
