--- a/motiv.fig.tex
+++ b/motiv.fig.tex
@@ -11,13 +11,40 @@
   l@{\extracolsep{\fill}} || 
   l@{\extracolsep{\fill}} }
 \BCOMMENT{\SPEC{$T_1$}} & \BCOMMENT{\SPEC{$T_2$}} & \BCOMMENT{\SPEC{$T_3$}}\\
-\BCOMMENT{\SPEC{\code{$h{:=}h_s\code{cos}\frac{\theta}{2}$;}}} & 
-\BCOMMENT{\SPEC{\code{$r{:=}h_s\code{sin}\frac{\theta}{2}$;}}} & \\
+\code{h=hs*cosine($\theta$/2);} & 
+\code{r=hs*cosine($\theta$/2);} & \\
 \code{countDown(c);} & \code{countDown(c);} & \code{await(c);}\\
-& & \BCOMMENT{\SPEC{\code{$V{:=}\frac{1}{3}\pi r^2 h$;~}}}\\
+& & \code{V=(1/3)*$\pi$*power(r,2)*h;}\\
 \end{tabular}\!\!\right)%\!\!\code{;}
 \]
 
+\begin{tabular}{ll}
+\begin{tikzpicture}[scale=0.75, every node/.style={transform shape}]
+ \begin{scope}
+   \clip (-2,0) rectangle (2,1cm);
+   \draw[dashed] (0,0) circle (2cm and 0.35cm);
+ \end{scope}
+ \begin{scope}
+   \clip (-2,0) rectangle (2,-1cm);
+   \draw (0,0) circle (2cm and 0.35cm);
+ \end{scope}
+   \draw[densely dashed]
+        (0,4) coordinate (c)
+     -- node[auto=right] {$h$}            %,font=\footnotesize
+        coordinate[pos=0.95] (aa) (0,0)
+     -- node[below] {$r$} 
+        coordinate[pos=0.1]  (bb) (2,0);
+   \draw (aa) -| (bb);
+   \draw (c) -- (-2,0) coordinate (a);
+   \draw (c) -- node [auto=left] {$hs$} 
+                (2,0) coordinate (b);
+   \begin{scope}
+     \path[clip] (a) -- (c) -- (b) -- cycle;
+     \draw (c) circle (5mm) node [label=below:$\theta$]{};
+   \end{scope}    
+\end{tikzpicture}
+
+&
 \pause
 \begin{tikzpicture}[every node/.style={anchor=base,
     text height=.8em,text depth=.2em,minimum size=7mm},
@@ -50,7 +77,6 @@
   \draw [->, dashed] (cnt_0) -- node [] {} (cont_2);
   \draw [->, dashed, auto] (cnt_0) |- node [below] {\code{cnt=0}} (cont_m);
 \end{tikzpicture}
-%% \caption{A use-case of %% synchronization pattern with
-%%   {\CDL}}
-%% \label{fig:latch_wait_for_consume}
+\end{tabular}
+
 \end{figure}
