--- a/motiv.fig.tex
+++ b/motiv.fig.tex
@@ -12,7 +12,7 @@
   l@{\extracolsep{\fill}} }
 \BCOMMENT{\SPEC{$T_1$}} & \BCOMMENT{\SPEC{$T_2$}} & \BCOMMENT{\SPEC{$T_3$}}\\
 \code{h=hs*cosine($\theta$/2);} & 
-\code{r=hs*cosine($\theta$/2);} & \\
+\code{r=hs*sine($\theta$/2);} & \\
 \code{countDown(c);} & \code{countDown(c);} & \code{await(c);}\\
 & & \code{V=(1/3)*$\pi$*power(r,2)*h;}\\
 \end{tabular}\!\!\right)%\!\!\code{;}
